# sf-operations

./: .gitignore  README.md  pyproject.toml
idio_vol_model/: model.py
signals/: __init__.py  add_signals.py  combine_mvos.py  compute_gamma.py  get_signal_weights.py  get_signal_weights.sh  plot_TE_vs_gamma.ipynb  plot_TE_vs_gamma.py  plot_TE_vs_gamma.sh  plot_active_risk_vs_gamma.py  plot_active_risk_vs_gamma.sh  rerun_fails.sh
tests/: test_compute_gamma.py
